# anira-rt-principle-check

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
eval/: ValidateInferenceEngines.ipynb
source/: main.cpp  utils.h
source/engines/: EngineBaseVal.cpp  EngineBaseVal.h  LibTorchVal.cpp  TFLiteVal.cpp  enginebase.h  libtorch.h  onnxruntime.h  tflite.h
source/simpleRealTimeViolation/: main.cpp
source/validateArchitecture/: main.cpp
source/validateInferenceEngines/: main.cpp
source/validateInferenceEngines/engines/: EngineBaseVal.cpp  EngineBaseVal.h  LibTorchVal.cpp  LibTorchVal.h  OnnxRuntimeVal.cpp  OnnxRuntimeVal.h  TFLiteVal.cpp  TFLiteVal.h
source/validateInferenceEngines/evalModels/: CustomCnnInferenceConfig.h  CustomHybridNNConfig.h  CustomInferenceConfig.h  CustomStatefulRNNConfig.h
